--- a/TeduCoreApp/appsettings.json
+++ b/TeduCoreApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TeduConnection": "Server=HALO-KIRIN;Database=TeduCoreApp;User Id=sa;Password=cntt;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
