--- a/TeduCoreApp/Properties/launchSettings.json
+++ b/TeduCoreApp/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62496",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:51638",
+      "sslPort": 44369
     }
   },
   "profiles": {
@@ -18,7 +18,7 @@
     "TeduCoreApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
