--- a/TeduCoreApp.Application/TeduCoreApp.Application.csproj
+++ b/TeduCoreApp.Application/TeduCoreApp.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="EPPlus" Version="5.2.1" />
   </ItemGroup>
 
   <ItemGroup>
