End of section 51

--- a/TeduCoreApp/appsettings.json
+++ b/TeduCoreApp/appsettings.json
@@ -2,7 +2,20 @@
   "ConnectionStrings": {
     "TeduConnection": "Server=HALO-KIRIN;Database=TeduCoreApp;User Id=sa;Password=cntt;MultipleActiveResultSets=true"
   },
-  "PageSize": 1,
+  "MailSettings": {
+    "Server": "smtp.gmail.com",
+    "UserName": "phaichisophan@gmail.com",
+    "Password": "drm1997bn",
+    "FromEmail": "phaichisophan@gmail.com",
+    "FromName": "HALO Shop",
+    "Port": "587",
+    "EnableSsl": "true"
+  },
+  "Recaptcha": {
+    "SiteKey": "6Ld6WboZAAAAAJbe4__LJCNCyjmReVZGwNxuNDRi",
+    "SecretKey": "6Ld6WboZAAAAAEHEz9S8mMMw5zHtMvAM-z6XxjYB"
+  },
+  "PageSize": 10,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
